- Reorganized project structure for better maintainability - Renamed files for improved clarity and consistency - Initial cleanup and preparation for further development

--- a/app/src/main/res/drawable/ic_fadeout_gradient.xml
+++ b/app/src/main/res/drawable/ic_fadeout_gradient.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
 
     <gradient
-        android:type="linear"
         android:angle="270"
-        android:startColor="@color/color_surface"
-        android:endColor="@color/color_background"/>
+        android:endColor="@color/color_surface"
+        android:startColor="@color/transparent"
+        android:type="linear" />
+
 </shape>
