--- a/app/src/main/res/layout/frag_home_1_main_1_fav_item_1.xml
+++ b/app/src/main/res/layout/frag_home_1_main_1_fav_item_1.xml
@@ -17,7 +17,7 @@
         android:adjustViewBounds="true"
         android:importantForAccessibility="no"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_google" />
+        android:src="@drawable/ic_site_google" />
 
     <TextView
         android:id="@+id/title_of_favicon"
