--- a/app/src/main/res/drawable/ic_fadeout_gradient_upside_down.xml
+++ b/app/src/main/res/drawable/ic_fadeout_gradient_upside_down.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
 
     <gradient
-        android:type="linear"
-        android:angle="90"
+        android:angle="270"
+        android:endColor="@color/transparent"
         android:startColor="@color/color_surface"
-        android:endColor="@color/color_background"/>
+        android:type="linear" />
+
 </shape>
