--- a/app/src/main/res/layout/activity_bookmarks_1.xml
+++ b/app/src/main/res/layout/activity_bookmarks_1.xml
@@ -116,7 +116,7 @@
                 app:lottie_autoPlay="true"
                 app:lottie_enableMergePathsForKitKatAndAbove="true"
                 app:lottie_loop="true"
-                app:lottie_rawRes="@raw/empty_downloads_animation" />
+                app:lottie_rawRes="@raw/animation_empty_box" />
 
             <TextView
                 android:layout_width="wrap_content"
