--- a/app/src/main/res/layout/frag_brow_1_main_1.xml
+++ b/app/src/main/res/layout/frag_brow_1_main_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background_radial_gradient"
+    android:background="@color/transparent"
     android:orientation="vertical"
     tools:ignore="UseCompatTextViewDrawableXml,UseAppTint">
 
@@ -341,7 +341,7 @@
             app:lottie_autoPlay="true"
             app:lottie_enableMergePathsForKitKatAndAbove="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/infinity_loop_animation" />
+            app:lottie_rawRes="@raw/animation_infinite_loop" />
 
     </androidx.cardview.widget.CardView>
 
