--- a/app/src/main/res/layout/frag_down_4_finish_1.xml
+++ b/app/src/main/res/layout/frag_down_4_finish_1.xml
@@ -51,7 +51,7 @@
                 app:lottie_autoPlay="true"
                 app:lottie_enableMergePathsForKitKatAndAbove="true"
                 app:lottie_loop="true"
-                app:lottie_rawRes="@raw/empty_downloads_animation" />
+                app:lottie_rawRes="@raw/animation_empty_box" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -124,7 +124,7 @@
             app:lottie_autoPlay="true"
             app:lottie_enableMergePathsForKitKatAndAbove="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/active_tasks_animation" />
+            app:lottie_rawRes="@raw/animation_active_tasks" />
     </LinearLayout>
 
 </RelativeLayout>
