--- a/app/src/main/res/layout/activity_mother_2_frag_holder_1.xml
+++ b/app/src/main/res/layout/activity_mother_2_frag_holder_1.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<lib.ui.builders.NonSwappableViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_viewpager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:layout_above="@+id/bottom_tab_navigation"
+    android:background="@color/transparent" />
