--- a/app/src/main/res/layout/frag_down_1_main_1.xml
+++ b/app/src/main/res/layout/frag_down_1_main_1.xml
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <lib.ui.builders.NonSwappableViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/fragment_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
