--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -97,11 +97,11 @@
         <item name="android:windowActionBar">false</item>
         <item name="android:windowActionBarOverlay">false</item>
         <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsFloating">false</item>
 
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:fitsSystemWindows">true</item>
 
         <item name="colorPrimary">@color/color_primary</item>
