--- a/app/src/main/res/layout/activity_feedback_1.xml
+++ b/app/src/main/res/layout/activity_feedback_1.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -31,7 +30,8 @@
                 android:layout_width="@dimen/_50"
                 android:layout_height="match_parent"
                 android:background="@drawable/ic_button_negative_selector"
-                android:clickable="true">
+                android:clickable="true"
+                tools:ignore="SpeakableTextPresentCheck">
 
                 <ImageView
                     android:id="@+id/button_left_actionbar_img"
@@ -41,7 +41,8 @@
                     android:adjustViewBounds="true"
                     android:importantForAccessibility="no"
                     android:src="@drawable/ic_button_actionbar_back"
-                    android:tint="@color/color_secondary" />
+                    android:tint="@color/color_secondary"
+                    tools:ignore="ImageContrastCheck" />
             </RelativeLayout>
 
             <TextView
@@ -67,7 +68,8 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/ic_button_negative_selector"
-                android:clickable="true">
+                android:clickable="true"
+                tools:ignore="SpeakableTextPresentCheck">
 
                 <ImageView
                     android:id="@+id/button_right_actionbar_img"
@@ -77,7 +79,8 @@
                     android:adjustViewBounds="true"
                     android:importantForAccessibility="no"
                     android:src="@drawable/ic_button_actionbar_send"
-                    android:tint="@color/color_secondary" />
+                    android:tint="@color/color_secondary"
+                    tools:ignore="ImageContrastCheck" />
             </RelativeLayout>
 
         </RelativeLayout>
@@ -160,7 +163,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/text_no_sound"
                         android:textColor="@color/color_text_primary"
-                        android:textSize="@dimen/normal_text_size" />
+                        android:textSize="@dimen/normal_text_size"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <CheckBox
                         android:id="@+id/checkbox_incomplete_video"
@@ -176,7 +180,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/text_incomplete_video"
                         android:textColor="@color/color_text_primary"
-                        android:textSize="@dimen/normal_text_size" />
+                        android:textSize="@dimen/normal_text_size"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <CheckBox
                         android:id="@+id/checkbox_app_crashed"
@@ -192,7 +197,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/text_app_crashed"
                         android:textColor="@color/color_text_primary"
-                        android:textSize="@dimen/normal_text_size" />
+                        android:textSize="@dimen/normal_text_size"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <CheckBox
                         android:id="@+id/checkbox_glitch_in_video"
@@ -208,7 +214,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/text_glitch_in_video"
                         android:textColor="@color/color_text_primary"
-                        android:textSize="@dimen/normal_text_size" />
+                        android:textSize="@dimen/normal_text_size"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <CheckBox
                         android:id="@+id/checkbox_showing_too_many_ads"
@@ -224,7 +231,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/text_showing_many_ads"
                         android:textColor="@color/color_text_primary"
-                        android:textSize="@dimen/normal_text_size" />
+                        android:textSize="@dimen/normal_text_size"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <CheckBox
                         android:id="@+id/checkbox_other_problem"
@@ -240,7 +248,8 @@
                         android:gravity="center_vertical"
                         android:text="@string/text_other_problems"
                         android:textColor="@color/color_text_primary"
-                        android:textSize="@dimen/normal_text_size" />
+                        android:textSize="@dimen/normal_text_size"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -289,7 +298,8 @@
                             android:textColor="@color/color_on_surface"
                             android:textColorHint="@color/color_text_hint"
                             android:textSize="@dimen/normal_text_size"
-                            android:textStyle="normal" />
+                            android:textStyle="normal"
+                            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
                     </LinearLayout>
 
@@ -318,26 +328,12 @@
                             android:textColor="@color/color_on_surface"
                             android:textColorHint="@color/color_text_hint"
                             android:textSize="@dimen/normal_text_size"
-                            android:textStyle="normal" />
+                            android:textStyle="normal"
+                            tools:ignore="TextContrastCheck" />
                     </LinearLayout>
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/ad_space_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/admob_fixed_sized_banner_ad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            ads:adSize="320x100"
-            ads:adUnitId="@string/text_fixed_sized_banner_ad_unit_id" />
-    </LinearLayout>
 </LinearLayout>
