--- a/app/src/main/res/layout/dialog_video_link_editor_1.xml
+++ b/app/src/main/res/layout/dialog_video_link_editor_1.xml
@@ -54,11 +54,14 @@
                 android:layout_marginEnd="@dimen/_15"
                 android:layout_marginBottom="@dimen/_5"
                 android:background="@drawable/rounded_surface_color"
-                android:orientation="vertical">
+                android:clickable="true"
+                android:orientation="vertical"
+                tools:ignore="TouchTargetSizeCheck">
 
                 <EditText
                     android:id="@+id/edit_field_file_url"
                     style="@style/style_dialog.message"
+                    android:layout_width="wrap_content"
                     android:layout_margin="@dimen/_8"
                     android:background="@color/transparent"
                     android:gravity="center_vertical"
@@ -70,7 +73,8 @@
                     android:textColor="@color/color_on_surface"
                     android:textColorHint="@color/color_text_hint"
                     android:textSize="@dimen/normal_text_size"
-                    android:textStyle="normal" />
+                    android:textStyle="normal"
+                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
             </LinearLayout>
 
@@ -84,7 +88,8 @@
                 android:layout_marginBottom="@dimen/_5"
                 android:background="@drawable/ic_button_selector_secondary"
                 android:clickable="true"
-                android:elevation="@dimen/_2">
+                android:elevation="@dimen/_2"
+                tools:ignore="TouchTargetSizeCheck">
 
                 <TextView
                     android:id="@+id/button_dialog_positive"
@@ -115,7 +120,8 @@
                 android:maxLines="2"
                 android:text="@string/text_go_to_tasks_tab_to_see_progress"
                 android:textColor="@color/color_secondary"
-                android:textSize="@dimen/smaller_text_size" />
+                android:textSize="@dimen/smaller_text_size"
+                tools:ignore="TextContrastCheck" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
