feat: add opening screen to preload model data before launching main activity
- Implemented an initial loading/opening screen
- Loads model data in the background to improve user experience
- Transitions to the main (mother) activity once data is ready
====================
-- part 1

--- a/app/src/main/res/values/strings_library.xml
+++ b/app/src/main/res/values/strings_library.xml
@@ -471,5 +471,6 @@
     <string name="title_disable_now">Disable Now</string>
     <string name="text_battery_optimization_msg"><b>To ensure downloads are not interrupted</b>, exclude this app from battery optimization.</string>
     <string name="text_couldnt_get_video_title">Server\'s busy, try again later.</string>
+    <string name="text_app_splash_credit">Made with ❤️ in India 🇮🇳</string>
 
 </resources>
