--- a/app/src/main/res/layout/activity_opening_1.xml
+++ b/app/src/main/res/layout/activity_opening_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_activity">
+    android:background="@color/color_surface">
 
     <!-- ========================== Center Content ========================== -->
     <LinearLayout
