feat: add opening screen to preload model data before launching main activity
- Implemented an initial loading/opening screen
- Loads model data in the background to improve user experience
- Transitions to the main (mother) activity once data is ready
====================
-- part 3

--- a/app/src/main/res/values/styles_text_sizes.xml
+++ b/app/src/main/res/values/styles_text_sizes.xml
@@ -9,4 +9,5 @@
     <dimen name="sub_heading_text_size">18sp</dimen>
     <dimen name="title_text_size">19sp</dimen>
     <dimen name="actionbar_text_size">19sp</dimen>
+    <dimen name="extra_large_text_size">22sp</dimen>
 </resources>
