--- a/app/src/main/res/layout/activity_opening_1.xml
+++ b/app/src/main/res/layout/activity_opening_1.xml
@@ -34,15 +34,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/_5"
-            android:fontFamily="@font/font_family_bold"
+            android:fontFamily="@font/font_family_special"
             android:gravity="center"
             android:paddingStart="@dimen/_10"
             android:paddingTop="@dimen/_2"
             android:paddingEnd="@dimen/_10"
             android:paddingBottom="@dimen/_2"
-            android:text="@string/title_aio_video_downloader"
+            android:text="@string/title_video_downloader"
             android:textColor="@color/color_text_primary"
-            android:textSize="@dimen/title_text_size" />
+            android:textSize="@dimen/extra_large_text_size"
+            android:textStyle="bold" />
 
         <!-- Loading animation (Lottie) -->
         <com.airbnb.lottie.LottieAnimationView
@@ -77,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/txt_version_info"
         android:layout_centerHorizontal="true"
-        android:fontFamily="@font/font_family_medium"
+        android:fontFamily="@font/font_family_special"
         android:text="@string/text_app_splash_credit"
         android:textColor="@color/color_text_primary"
         android:textSize="@dimen/normal_text_size_small" />
@@ -90,7 +91,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/_50"
-        android:fontFamily="@font/font_family_light"
+        android:fontFamily="@font/font_family_special"
         android:paddingTop="@dimen/_5"
         android:text="@string/text__"
         android:textColor="@color/color_text_primary"
