--- a/app/src/main/res/layout/frag_down_4_finish_1_row_1.xml
+++ b/app/src/main/res/layout/frag_down_4_finish_1_row_1.xml
@@ -67,8 +67,7 @@
                     android:singleLine="false"
                     android:text="@string/text_sample_video_file_name"
                     android:textColor="@color/color_text_primary"
-                    android:textSize="@dimen/message_text_size"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/normal_text_size_small"/>
 
                 <ImageView
                     android:id="@+id/btn_open_download_file"
