--- a/app/src/main/res/layout/frag_home_1_main_1.xml
+++ b/app/src/main/res/layout/frag_home_1_main_1.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Main scrollable container for the download manager interface -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,11 +9,13 @@
     android:orientation="vertical"
     tools:ignore="UseCompatTextViewDrawableXml,UseAppTint">
 
+    <!-- Contains all the card sections in vertical layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <!-- URL input card with download button -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,6 +37,7 @@
                 android:layout_marginBottom="@dimen/_5"
                 android:orientation="vertical">
 
+                <!-- URL input field container -->
                 <LinearLayout
                     android:id="@+id/edit_url_container"
                     android:layout_width="match_parent"
@@ -49,6 +53,7 @@
                     android:orientation="vertical"
                     tools:ignore="TouchTargetSizeCheck">
 
+                    <!-- Actual URL input field -->
                     <EditText
                         android:id="@+id/edit_url"
                         style="@style/style_dialog.message"
@@ -69,6 +74,7 @@
 
                 </LinearLayout>
 
+                <!-- Download action button -->
                 <RelativeLayout
                     android:id="@+id/btn_add_download"
                     android:layout_width="@dimen/_50"
@@ -92,6 +98,7 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Favorite websites quick-access card -->
         <androidx.cardview.widget.CardView
             android:id="@+id/container_favorite_sites"
             android:layout_width="match_parent"
@@ -115,6 +122,7 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- Grid of favorite site favicons -->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/favicons_recycler_list"
                     android:layout_width="match_parent"
@@ -126,6 +134,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- History and Bookmarks quick-access card -->
         <androidx.cardview.widget.CardView
             android:id="@+id/container_history_bookmark"
             android:layout_width="match_parent"
@@ -149,6 +158,7 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
+                <!-- History button -->
                 <RelativeLayout
                     android:id="@+id/btn_open_history"
                     android:layout_width="0dp"
@@ -174,6 +184,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </RelativeLayout>
 
+                <!-- Bookmarks button -->
                 <RelativeLayout
                     android:id="@+id/btn_open_bookmark"
                     android:layout_width="0dp"
@@ -201,6 +212,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Active downloads status card (hidden by default) -->
         <androidx.cardview.widget.CardView
             android:id="@+id/container_active_downloads"
             android:layout_width="match_parent"
@@ -224,6 +236,7 @@
                 android:layout_marginBottom="@dimen/_5"
                 android:baselineAligned="false">
 
+                <!-- Active downloads info text -->
                 <TextView
                     android:id="@+id/txt_active_downloads_info"
                     android:layout_width="match_parent"
@@ -241,6 +254,7 @@
                     android:text="@string/text__"
                     android:textSize="@dimen/normal_text_size" />
 
+                <!-- View active downloads button -->
                 <RelativeLayout
                     android:id="@+id/btn_open_active_downloads"
                     android:layout_width="@dimen/_50"
@@ -264,6 +278,7 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Recent downloads card (hidden by default) -->
         <androidx.cardview.widget.CardView
             android:id="@+id/container_recent_downloads"
             android:layout_width="match_parent"
@@ -282,6 +297,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <!-- Recent downloads header -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -301,6 +317,7 @@
 
                 </LinearLayout>
 
+                <!-- Grid of recent downloads -->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recent_downloads_recycle_list"
                     android:layout_width="match_parent"
@@ -315,6 +332,7 @@
                     app:spanCount="3"
                     tools:listitem="@layout/frag_home_1_main_1_recent_item_1" />
 
+                <!-- View all downloads button -->
                 <TextView
                     android:id="@+id/open_downloads_tab"
                     android:layout_width="wrap_content"
@@ -334,6 +352,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Empty state card (shown when no downloads exist) -->
         <androidx.cardview.widget.CardView
             android:id="@+id/container_empty_downloads"
             android:layout_width="match_parent"
@@ -352,6 +371,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <!-- Empty state illustration -->
                 <ImageView
                     android:id="@+id/img_empty_downloads"
                     android:layout_width="wrap_content"
@@ -363,6 +383,7 @@
                     android:importantForAccessibility="no"
                     android:src="@drawable/image_empty_box" />
 
+                <!-- Empty state message -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -377,6 +398,7 @@
                     android:textColor="@color/color_text_primary"
                     android:textSize="@dimen/message_text_size" />
 
+                <!-- Help/guide button -->
                 <RelativeLayout
                     android:id="@+id/btn_how_to_download"
                     android:layout_width="match_parent"
