--- a/app/src/main/res/layout/frag_home_1_main_1_fav_item_1.xml
+++ b/app/src/main/res/layout/frag_home_1_main_1_fav_item_1.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Main container for a website favicon and name display -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
@@ -9,6 +10,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <!-- Website favicon/image displayed at the top -->
     <ImageView
         android:id="@+id/img_site_favicon"
         android:layout_width="@dimen/_40"
@@ -19,6 +21,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/ic_site_google" />
 
+    <!-- Website name displayed below the favicon -->
     <TextView
         android:id="@+id/txt_favicon_site_name"
         android:layout_width="wrap_content"
