--- a/app/src/main/res/layout/frag_settings_1_main_1.xml
+++ b/app/src/main/res/layout/frag_settings_1_main_1.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Root ScrollView to enable scrolling when content exceeds screen height -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,11 +9,13 @@
     android:orientation="vertical"
     tools:ignore="UseCompatTextViewDrawableXml,UseAppTint">
 
+    <!-- Main vertical LinearLayout containing all CardView sections -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <!-- FIRST CARD: Application Settings Section -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!-- Download Location Setting -->
                 <LinearLayout
                     android:id="@+id/btn_default_download_folder"
                     android:layout_width="match_parent"
@@ -57,6 +61,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Language Picker Setting -->
                 <LinearLayout
                     android:id="@+id/btn_language_picker"
                     android:layout_width="match_parent"
@@ -85,6 +90,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Divider -->
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1"
@@ -94,6 +100,7 @@
                     android:layout_marginBottom="@dimen/_5"
                     android:background="@color/transparent_dark" />
 
+                <!-- Browser Homepage Setting -->
                 <LinearLayout
                     android:id="@+id/btn_browser_homepage"
                     android:layout_width="match_parent"
@@ -122,6 +129,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Video Grabber Toggle -->
                 <LinearLayout
                     android:id="@+id/btn_enable_video_grabber"
                     android:layout_width="match_parent"
@@ -150,6 +158,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Popup Blocker Toggle -->
                 <LinearLayout
                     android:id="@+id/btn_enable_popup_blocker"
                     android:layout_width="match_parent"
@@ -178,6 +187,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Divider -->
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1"
@@ -187,6 +197,7 @@
                     android:layout_marginBottom="@dimen/_5"
                     android:background="@color/transparent_dark" />
 
+                <!-- Notification Settings -->
                 <LinearLayout
                     android:id="@+id/btn_hide_task_notifications"
                     android:layout_width="match_parent"
@@ -215,6 +226,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- WiFi Only Downloads Toggle -->
                 <LinearLayout
                     android:id="@+id/btn_wifi_only_downloads"
                     android:layout_width="match_parent"
@@ -243,6 +255,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Notification Sound Toggle -->
                 <LinearLayout
                     android:id="@+id/btn_play_notification_sound"
                     android:layout_width="match_parent"
@@ -250,7 +263,7 @@
                     android:layout_marginStart="@dimen/_10"
                     android:layout_marginTop="@dimen/_0"
                     android:layout_marginEnd="@dimen/_10"
-                    android:layout_marginBottom="@dimen/_10"
+                    android:layout_marginBottom="@dimen/_0"
                     android:background="@drawable/ic_button_negative_selector"
                     android:clickable="true"
                     android:orientation="vertical"
@@ -271,9 +284,48 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Divider -->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_1"
+                    android:layout_marginStart="@dimen/_10"
+                    android:layout_marginTop="@dimen/_5"
+                    android:layout_marginEnd="@dimen/_5"
+                    android:layout_marginBottom="@dimen/_5"
+                    android:background="@color/transparent_dark" />
+
+                <!-- Advanced Settings Button -->
+                <LinearLayout
+                    android:id="@+id/btn_advance_settings"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/_10"
+                    android:layout_marginTop="@dimen/_0"
+                    android:layout_marginEnd="@dimen/_10"
+                    android:layout_marginBottom="@dimen/_10"
+                    android:background="@drawable/ic_button_negative_selector"
+                    android:clickable="true"
+                    android:orientation="vertical"
+                    tools:ignore="TouchTargetSizeCheck">
+
+                    <TextView
+                        android:id="@+id/txt_advance_settings"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_8"
+                        android:drawableStart="@drawable/ic_button_settings"
+                        android:drawableEnd="@drawable/ic_button_open_small"
+                        android:drawablePadding="@dimen/_5"
+                        android:drawableTint="@color/color_secondary"
+                        android:fontFamily="@font/application_font_family"
+                        android:text="@string/text_other_advance_settings"
+                        android:textColor="@color/color_text_primary"
+                        android:textSize="@dimen/normal_text_size" />
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- SECOND CARD: Legal & Support Section -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -290,6 +342,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!-- Terms & Conditions -->
                 <LinearLayout
                     android:id="@+id/btn_open_terms_condition"
                     android:layout_width="match_parent"
@@ -318,6 +371,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Privacy Policy -->
                 <LinearLayout
                     android:id="@+id/btn_open_privacy_policy"
                     android:layout_width="match_parent"
@@ -346,6 +400,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Content Policy -->
                 <LinearLayout
                     android:id="@+id/btn_open_content_policy"
                     android:layout_width="match_parent"
@@ -374,6 +429,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Divider -->
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1"
@@ -383,6 +439,7 @@
                     android:layout_marginBottom="@dimen/_5"
                     android:background="@color/transparent_dark" />
 
+                <!-- Feedback Button -->
                 <LinearLayout
                     android:id="@+id/btn_open_feedback"
                     android:layout_width="match_parent"
@@ -411,6 +468,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- About Info Button -->
                 <LinearLayout
                     android:id="@+id/btn_open_about_info"
                     android:layout_width="match_parent"
@@ -439,6 +497,7 @@
                         android:textSize="@dimen/normal_text_size" />
                 </LinearLayout>
 
+                <!-- Share with Friends Button -->
                 <LinearLayout
                     android:id="@+id/btn_share_with_friends"
                     android:layout_width="match_parent"
@@ -470,6 +529,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- THIRD CARD: Version & Update Section -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -486,6 +546,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!-- Version Info Text -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -508,6 +569,7 @@
 
                 </LinearLayout>
 
+                <!-- Check for Updates Button -->
                 <RelativeLayout
                     android:id="@+id/btn_check_new_update"
                     android:layout_width="match_parent"
@@ -541,6 +603,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- FOURTH CARD: Restart & Support Section -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -561,6 +624,7 @@
                 android:layout_marginBottom="@dimen/_8"
                 android:orientation="vertical">
 
+                <!-- Support Thank You Text -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -571,6 +635,7 @@
                     android:textColor="@color/color_text_primary"
                     android:textSize="@dimen/small_text_size" />
 
+                <!-- Restart Application Button -->
                 <TextView
                     android:id="@+id/btn_restart_application"
                     android:layout_width="match_parent"
