--- a/app/src/main/res/layout/frag_home_1_main_1.xml
+++ b/app/src/main/res/layout/frag_home_1_main_1.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Main scrollable container for the download manager interface -->
+<?xml version="1.0" encoding="utf-8"?><!-- Main scrollable container for the download manager interface -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -349,6 +348,61 @@
                     android:textColor="@color/color_text_primary"
                     android:textSize="@dimen/small_text_size" />
 
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <!-- Empty state card (shown when no downloads exist) -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/container_loading_downloads"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15"
+            android:layout_marginTop="@dimen/_0"
+            android:layout_marginEnd="@dimen/_15"
+            android:layout_marginBottom="@dimen/_10"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:cardBackgroundColor="@color/color_background"
+            app:cardCornerRadius="@dimen/_10">
+
+            <!-- Main vertical layout to stack the animation and message -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!-- Lottie animation indicating loading or progress state -->
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/img_progress_circle"
+                    android:layout_width="@dimen/_150"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_marginTop="@dimen/_0"
+                    android:layout_marginBottom="-30dp"
+                    android:adjustViewBounds="true"
+                    android:hardwareAccelerated="true"
+                    android:importantForAccessibility="no"
+                    android:layerType="hardware"
+                    android:visibility="visible"
+                    app:lottie_autoPlay="true"
+                    app:lottie_enableMergePathsForKitKatAndAbove="true"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/anim_color_circle_loading"
+                    tools:ignore="ImageContrastCheck,VisualLintBounds" />
+
+                <!-- Text message to show loading info or status to the user -->
+                <TextView
+                    android:id="@+id/txt_progress_info"
+                    style="@style/style_dialog.message"
+                    android:layout_marginStart="@dimen/_10"
+                    android:layout_marginTop="@dimen/_8"
+                    android:layout_marginEnd="@dimen/_10"
+                    android:layout_marginBottom="@dimen/_8"
+                    android:autoLink="web"
+                    android:fontFamily="@font/application_font_family"
+                    android:text="@string/text_loading_downloads_data"
+                    android:textSize="@dimen/message_text_size" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
